--- a/index.html
+++ b/index.html
@@ -1714,8 +1714,7 @@
             </div>
             <div class="principal-link">
                 <a href="principal.html" class="btn-primary">
-                    <i class="fas fa-user-tie"></i> Visit Principal and Head PrefectsMessage page
-                </a>
+                    <i class="fas fa-user-tie"></i> Visit Principal and Head PrefectsMessage page </a>
             </div>
         </div>
     </section>
