--- a/index.html
+++ b/index.html
@@ -1712,9 +1712,9 @@
                     </div>
                 </div>
             </div>
-            <div class="principal-link">
-                <a href="principal.html" class="btn-primary">
-                    <i class="fas fa-user-tie"></i> Visit Principal and Head PrefectsMessage page </a>
+            <div class="prefects-button-container">
+                <a href="principal.html" class="prefects-button">
+                    <i class="fas fa-user-tie"></i> <center>Visit Principal and Head PrefectsMessage page</center> </a>
             </div>
         </div>
     </section>
