--- a/index.html
+++ b/index.html
@@ -1712,8 +1712,8 @@
                     </div>
                 </div>
             </div>
-            <div class="prefects-button-container">
-                <a href="principal.html" class="prefects-button">
+            <div class="principal-link">
+                <a href="principal.html" class="btn-primary">
                     <i class="fas fa-user-tie"></i> <center>Visit Principal and Head PrefectsMessage page</center> </a>
             </div>
         </div>
