--- a/index.html
+++ b/index.html
@@ -1432,7 +1432,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <img src="images/logo.png" alt="School Logo">
+                <img src="https://raw.githubusercontent.com/SLSLKDMLKD/hhj/refs/heads/main/images/bea82466-8bc3-4bbf-96be-dfdbc8cccf00_removalai_preview.png" alt="School Logo">
                 <span class="logo-text">PCC</span>
             </div>
             <ul class="nav-links">
