--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             font-size: 2rem;
             font-weight: 600;
             letter-spacing: 1.2px;
-            text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+            text-shadow: 2px 2px 3px rgb(165, 42, 42);
             transition: all 0.3s ease;
             position: relative;
             display: inline-block;
