--- a/index.html
+++ b/index.html
@@ -1433,7 +1433,7 @@
         <div class="nav-container">
             <div class="logo">
                 <img src="https://raw.githubusercontent.com/SLSLKDMLKD/hhj/refs/heads/main/images/bea82466-8bc3-4bbf-96be-dfdbc8cccf00_removalai_preview.png" alt="School Logo">
-                <span class="logo-text">PCC</span>
+                <span class="logo-text"></span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
