--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
         }
 
         .logo:hover img {
-            transform: scale(1.05);
+           transform: scale(1.1);
+            filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7)); 
         }
 
         .logo-text {
