--- a/index.html
+++ b/index.html
@@ -392,17 +392,18 @@
         }
 
         /* Navigation */
-        .navbar {
-            background: var(--navy);
-            padding: 1rem 0;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
-        }
+.navbar {
+    background: white; /* Changed from var(--navy) to white */
+    padding: 1rem 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
+    color: #333; /* Adding default text color for contrast */
+}
 
         .nav-container {
             width: 90%;
