--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
             transition: transform 0.3s ease;
         }
 
-        .logo:hover img {
-           transform: scale(1.1);
-            filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7)); 
-        }
+      .logo img:hover {
+    transform: scale(1.1);
+    filter: brightness(1.2) saturate(1.5);
+}
 
         .logo-text {
             color: #1a237e;
