--- a/index.html
+++ b/index.html
@@ -420,14 +420,12 @@
         }
 
         .logo img {
-            height: 80px;
-            width: auto;
-            transition: transform 0.3s ease;
-        }
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
 
-      .logo img:hover {
-    transform: scale(1.1);
-    filter: brightness(1.2) saturate(1.5);
+.logo img:hover {
+    transform: scale(1.15) translateY(-5px);
+    filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.2));
 }
 
         .logo-text {
