--- a/index.html
+++ b/index.html
@@ -419,13 +419,16 @@
             gap: 1rem;
         }
 
-        .logo img {
-    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+.logo img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.5);
+    animation: pulse 1.5s infinite;
 }
 
-.logo img:hover {
-    transform: scale(1.15) translateY(-5px);
-    filter: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.2));
+@keyframes pulse {
+    0% { box-shadow: 0 0 0 0 rgba(52, 152, 219, 0.7); }
+    70% { box-shadow: 0 0 0 10px rgba(52, 152, 219, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(52, 152, 219, 0); }
 }
 
         .logo-text {
