--- a/index.html
+++ b/index.html
@@ -413,10 +413,10 @@
             align-items: center;
         }
 
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
+        .logo img {
+            height: 80px;
+            width: auto;
+            transition: transform 0.3s ease;
         }
 
 .logo img:hover {
