--- a/index.html
+++ b/index.html
@@ -424,7 +424,10 @@
     box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.5);
     animation: pulse 1.5s infinite;
 }
-
+.logo img:hover {
+    transform: scale(1.1);
+    filter: brightness(1.2) saturate(1.5);
+}
 @keyframes pulse {
     0% { box-shadow: 0 0 0 0 rgba(52, 152, 219, 0.7); }
     70% { box-shadow: 0 0 0 10px rgba(52, 152, 219, 0); }
